--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Rent_Wheels_App_Template"
-             x:Class="Rent_Wheels_App_Template.App">
+             xmlns:local="clr-namespace:RentWheelsApp"
+             x:Class="RentWheelsApp.App"
+             UserAppTheme="Light">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
