--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="Rent_Wheels_App_Template.AppShell"
+    x:Class="RentWheelsApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Rent_Wheels_App_Template"
+    xmlns:local="clr-namespace:RentWheelsApp"
     Shell.FlyoutBehavior="Disabled">
 
     <TabBar>
-        <Tab Title="Rentals">
+        <Tab Title="Rentals" Icon="rentals.png">
             <ShellContent
-                Title="Rental Contracts"
                 ContentTemplate="{DataTemplate local:RentalPage}"
                 Route="RentalPage" />
+        </Tab>
+        
+        <Tab Title="Vehicles" Icon="cars.png">
+            <ShellContent
+                ContentTemplate="{DataTemplate local:VehicleInventoryPage}"
+                Route="VehicleInventoryPage" />
             
         </Tab>
     </TabBar>
