--- a/RentalPage.xaml
+++ b/RentalPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Rent_Wheels_App_Template.RentalPage">
+             x:Class="RentWheelsApp.RentalPage"
+             Title="Rentals Contracts">
 			 
-	<Label Text="Rent Wheels App Template"
+	<Label Text="Rentals page for the Rent Wheels App"
 	       HorizontalOptions="Center"
 	       VerticalOptions="Center"/>
  
