--- a/RentWheelsApp/RentalPage.xaml
+++ b/RentWheelsApp/RentalPage.xaml
@@ -10,38 +10,27 @@
           RowSpacing="10" ColumnSpacing="10">
         <Label Text="Rental Period" FontSize="24" 
                Margin="0, 20, 0, 0"
-               Grid.Row="0"
-               Grid.ColumnSpan="2" />
-        <Label Text="Start:"
-               VerticalOptions="Start"
+               Grid.Row="0" Grid.ColumnSpan="2" />
+        <Label Text="Start:" VerticalOptions="Start"
                Grid.Row="1" />
-        <DatePicker Format="d"
-                    HorizontalOptions="Fill"
-                    Grid.Row="2"
-                    Grid.Column="0" />
+        <DatePicker Format="d" HorizontalOptions="Fill"
+                    Grid.Row="2" Grid.Column="0" />
 
-        <Label Text="End:"
-               VerticalOptions="Start"
+        <Label Text="End:" VerticalOptions="Start"
                Grid.Row="1" Grid.Column="1" />
-        <DatePicker Format="d"
-                    HorizontalOptions="Fill"
-                    Grid.Row="2"
-                    Grid.Column="1" />
+        <DatePicker Format="d" HorizontalOptions="Fill"
+                    Grid.Row="2" Grid.Column="1" />
         <Label Text="Vehicle Selection" FontSize="24" 
                Margin="0, 20, 0, 0"
-               Grid.Row="3"
-               Grid.ColumnSpan="2" />
+               Grid.Row="3" Grid.ColumnSpan="2" />
 
         <Border Grid.Row="4" Grid.ColumnSpan="2">
             <CollectionView HorizontalOptions="Fill" />
         </Border>
         
-        <Button Text="Create Rental"
-                HeightRequest="40"
-                HorizontalOptions="Fill"
-                Margin="0, 20, 0, 0"
-                Grid.Row="5"
-                Grid.ColumnSpan="2" />
+        <Button Text="Create Rental" HeightRequest="40"
+                HorizontalOptions="Fill" Margin="0, 20, 0, 0"
+                Grid.Row="5" Grid.ColumnSpan="2" />
 
     </Grid>
 </ContentPage>
